Burner sounds no longer accumulate
Closes #1047